# event-creator

./: .eslintrc.cjs  .gitignore  createCalendarLinkFromText.js  eventParser.js  hello.html  manifest.json  package-lock.json  package.json  popup.js  service_worker.js
api/: app.py  pyproject.toml
api/lib/: google_calendar.py  parse_event.py
api/src/: parse_event.py  redis_client.py
api/tests/: test_google_calendar.py  test_parse_event.py
extension/: createCalendarLinkFromText.js  hello.html  package-lock.json  package.json  popup.js  service_worker.js
extension/lib/eventParser/: index.test.js
lib/eventParser/: index.js  index.test.js
lib/googleCalendar/: index.js
